2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the benchmark Makefile generation.

	* build-aux/benchmarks.mk (BENCH_BINFORMATS): Use `ptl_n', not
	`ptl' since the latter has been deprecated in the more recent
	versions of slc.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' benchmark/demo.

	* benchmarks/mandel/mandel.c: Provide code to use a round-robin
	distribution of points to cores instead of the naive N/P
	distribution. Use this code by default on MT targets, or if
	-DOTHER_DIST is used during preprocessing.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Upgrade benchmark code to the latest SL library.

	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/ll-generate.py: The `fast_*' memory
	management functions have been deprecated. Avoid using them.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the tmalloc demo.

	* demo/tmalloc.c: Add an empty interval to show the overhead of
	measurement (necessary since malloc/free are now quite low
	latency).

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the roman demo.

	* demo/roman.c: Import the roman printing code since it is not
	part of the SL library any more.

2012-05-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the checkers demo.

	* demo/checkers.c: Fix the loop ierations to fit in the configured
	resolutions (10x10).

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Adjust the benchmarks for use with fixed-size framebuffers.

	* benchmarks/mandel/mandel.d2,
	* demo/ca1d_demo.c,
	* demo/ca1d_main.c,
	* demo/checkers.c: Use the fixed size 100x100.

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the `keyblit' demo.

	* demo/keyblit.c: Match the key (background), not the foreground.

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the LL benchmarks containing dependent loops.

	* benchmarks/livermore/kernel3.c: Use the new place identifier
	semantics from MGSim to ensure a distribution across cores.
